--- a/src/styles/customs/_mixins.scss
+++ b/src/styles/customs/_mixins.scss
@@ -83,11 +83,11 @@
 	box-shadow: 0 4px 6px rgba(0 0 0 / 10%);
 	text-wrap: nowrap;
 	display: block;
+	font-size: rem-calc(18);
 	cursor: pointer;
 
 	@include box-shadow;
 	@include base-transition(all);
-	@include fluid-typing(16, 18);
 
 	@include mobile {
 		padding: rem-calc(12 20);
